--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"postcss": "^8.5.6",
 		"send": "^1.2.0",
 		"serve-static": "^2.2.0",
-		"svgo": "^3.3.2",
+		"svgo": "^4.0.0",
 		"uuid": "^11.1.0",
 		"ws": "^8.18.2",
 		"xml2js": "^0.6.2"
@@ -50,7 +50,7 @@
 		"@babel/preset-env": "^7.27.2",
 		"@babel/preset-react": "^7.27.1",
 		"@evilmartians/lefthook": "^1.11.14",
-		"@typescript-eslint/eslint-plugin": "^8.34.1",
+		"@typescript-eslint/eslint-plugin": "8.34.1",
 		"@wordpress/dependency-extraction-webpack-plugin": "^6.25.0",
 		"@wordpress/env": "^10.25.0",
 		"@wordpress/eslint-plugin": "^22.11.0",
@@ -64,20 +64,20 @@
 		"cross-env": "^7.0.3",
 		"css-minimizer-webpack-plugin": "^7.0.2",
 		"dotenv-cli": "^8.0.0",
-		"eslint": "^8.57.1",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-prettier": "^5.5.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-webpack-plugin": "^5.0.2",
+		"eslint": "8.57.1",
 		"glob": "^11.0.3",
 		"html_codesniffer": "2.5.1",
 		"image-minimizer-webpack-plugin": "^4.1.3",
-		"imagemin": "^9.0.1",
 		"imagemin-gifsicle": "^7.0.0",
 		"imagemin-jpegtran": "^8.0.0",
 		"imagemin-mozjpeg": "^10.0.0",
 		"imagemin-optipng": "^8.0.0",
 		"imagemin-svgo": "^11.0.1",
+		"imagemin": "^9.0.1",
 		"inquirer": "^12.6.3",
 		"lint-staged": "16.1.2",
 		"mini-css-extract-plugin": "^2.9.2",
@@ -88,7 +88,7 @@
 		"postcss-move-props-to-bg-image-query": "^4.0.0",
 		"postcss-preset-env": "^10.2.3",
 		"postcss-rtl": "^2.0.0",
-		"prettier": "3.5.3",
+		"prettier": "3.6.0",
 		"puppeteer-core": "24.10.1",
 		"remove-files-webpack-plugin": "^1.5.0",
 		"rimraf": "^6.0.1",
@@ -98,41 +98,45 @@
 		"svg-transform-loader": "^2.0.13",
 		"terser-webpack-plugin": "^5.3.14",
 		"thread-loader": "^4.0.4",
-		"webpack": "^5.99.9",
 		"webpack-cli": "^6.0.1",
+		"webpack": "^5.99.9",
 		"webpackbar": "^7.0.0"
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
+		"build:with-fonts": "npm run generate-theme-json && npm run build",
 		"build": "rm -rf build && npm run fonts:generate && rimraf build blocks && cross-env NODE_ENV=production wp-scripts build --config webpack.config.js --progress",
-		"create-block": "run-s create-block:run",
 		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
-		"format": "wp-scripts format && npm run format:php && npm run format:js",
-		"format:css": "wp-scripts format ./assets/**/*.scss",
-		"format:php": "composer run-script phpcs-fix",
-		"fonts": "php tools/font-processor.php",
+		"create-block": "run-s create-block:run",
+		"detect-fonts": "php tools/font-detection.php",
 		"fonts:detect": "php tools/font-detection.php",
 		"fonts:generate": "php tools/generate-theme-json.php",
-		"lint": "run-p lint:*",
+		"fonts": "php tools/font-processor.php",
+		"format:css": "wp-scripts format ./assets/**/*.scss",
+		"format:php": "composer run-script phpcs-fix",
+		"format": "wp-scripts format && npm run format:php && npm run format:js",
+		"generate-theme-json": "php tools/generate-theme-json.php",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:php": "composer run-script phpcs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
+		"lint": "run-p lint:*",
 		"packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
 		"postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
 		"preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
 		"reset": "rm -rf node_modules vendor build blocks package-lock.json composer.lock",
 		"setup": "npm run reset && npm i && composer i && npm run build",
+		"start:with-fonts": "npm run generate-theme-json && npm run start",
 		"start": "rm -rf build blocks && npm run fonts && npx cross-env NODE_ENV=development wp-scripts start",
 		"update-cursorrules": "./scripts/update-cursorrules.sh",
 		"version-update": "dotenv node updateVersion.js"
 	},
 	"lint-staged": {
 		"*.js": "wp-scripts lint-js",
-		"*.php": "composer run lint",
-		"*.scss": "wp-scripts lint-style",
 		"*.json": "wp-scripts lint-pkg-json",
-		"*.md": "wp-scripts lint-md-docs"
+		"*.md": "wp-scripts lint-md-docs",
+		"*.php": "composer run lint",
+		"*.scss": "wp-scripts lint-style"
 	}
 }
