--- a/package.json
+++ b/package.json
@@ -64,20 +64,20 @@
 		"cross-env": "^7.0.3",
 		"css-minimizer-webpack-plugin": "^7.0.2",
 		"dotenv-cli": "^8.0.0",
+		"eslint": "8.57.1",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-prettier": "^5.5.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-webpack-plugin": "^5.0.2",
-		"eslint": "8.57.1",
 		"glob": "^11.0.3",
 		"html_codesniffer": "2.5.1",
 		"image-minimizer-webpack-plugin": "^4.1.3",
+		"imagemin": "^9.0.1",
 		"imagemin-gifsicle": "^7.0.0",
 		"imagemin-jpegtran": "^8.0.0",
 		"imagemin-mozjpeg": "^10.0.0",
 		"imagemin-optipng": "^8.0.0",
 		"imagemin-svgo": "^11.0.1",
-		"imagemin": "^9.0.1",
 		"inquirer": "^12.6.3",
 		"lint-staged": "16.1.2",
 		"mini-css-extract-plugin": "^2.9.2",
@@ -98,14 +98,14 @@
 		"svg-transform-loader": "^2.0.13",
 		"terser-webpack-plugin": "^5.3.14",
 		"thread-loader": "^4.0.4",
-		"webpack-cli": "^6.0.1",
 		"webpack": "^5.99.9",
+		"webpack-cli": "^6.0.1",
 		"webpackbar": "^7.0.0"
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
 		"build:with-fonts": "npm run generate-theme-json && npm run build",
-		"build": "rm -rf build && npm run fonts:generate && rimraf build blocks && cross-env NODE_ENV=production wp-scripts build --config webpack.config.js --progress",
+		"build": "rimraf build && npm run fonts:generate && rimraf build blocks && wp-scripts build --config webpack.config.js --progress",
 		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
 		"create-block": "run-s create-block:run",
 		"detect-fonts": "php tools/font-detection.php",
@@ -125,10 +125,10 @@
 		"packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
 		"postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
 		"preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
-		"reset": "rm -rf node_modules vendor build blocks package-lock.json composer.lock",
+		"reset": "rimraf node_modules vendor build blocks package-lock.json composer.lock",
 		"setup": "npm run reset && npm i && composer i && npm run build",
 		"start:with-fonts": "npm run generate-theme-json && npm run start",
-		"start": "rm -rf build blocks && npm run fonts && npx cross-env NODE_ENV=development wp-scripts start",
+		"start": "rimraf build blocks && npm run fonts && wp-scripts start",
 		"update-cursorrules": "./scripts/update-cursorrules.sh",
 		"version-update": "dotenv node updateVersion.js"
 	},
