--- a/package.json
+++ b/package.json
@@ -104,13 +104,13 @@
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
-		"build": "rimraf build && npm run fonts:generate && rimraf build blocks && wp-scripts build --config webpack.config.js --progress",
+		"build": "rimraf blocks build && wp-scripts build --config webpack.config.js --progress && npm run fonts:generate",
 		"create-block": "run-s create-block:run",
 		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
 		"format": "wp-scripts format && npm run format:php && npm run format:js",
 		"format:css": "wp-scripts format ./assets/**/*.scss",
 		"format:php": "composer run-script phpcs-fix",
-		"fonts": "php tools/font-processor.php",
+		"fonts": "rimraf build/fonts && php tools/font-processor.php",
 		"fonts:detect": "php tools/font-detection.php",
 		"fonts:generate": "php tools/generate-theme-json.php",
 		"lint": "run-p lint:*",
