--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"url": "https://github.com/WebDevStudios/wds-bt/issues"
 	},
 	"engines": {
-		"node": ">=20.0.0",
+		"node": ">=22.0.0",
 		"npm": ">=10"
 	},
 	"dependencies": {
@@ -104,30 +104,26 @@
 	},
 	"scripts": {
 		"a11y": "node a11y.cjs",
-		"build:with-fonts": "npm run generate-theme-json && npm run build",
-		"build": "rimraf build && npm run fonts:generate && rimraf build blocks && wp-scripts build --config webpack.config.js --progress",
-		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
+		"build": "rimraf blocks build && wp-scripts build --config webpack.config.js --progress && npm run fonts:generate",
 		"create-block": "run-s create-block:run",
-		"detect-fonts": "php tools/font-detection.php",
-		"fonts:detect": "php tools/font-detection.php",
-		"fonts:generate": "php tools/generate-theme-json.php",
-		"fonts": "php tools/font-processor.php",
+		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
+		"format": "wp-scripts format && npm run format:php && npm run format:js",
 		"format:css": "wp-scripts format ./assets/**/*.scss",
 		"format:php": "composer run-script phpcs-fix",
-		"format": "wp-scripts format && npm run format:php && npm run format:js",
-		"generate-theme-json": "php tools/generate-theme-json.php",
+		"fonts": "rimraf build/fonts && php tools/font-processor.php",
+		"fonts:detect": "php tools/font-detection.php",
+		"fonts:generate": "php tools/generate-theme-json.php",
+		"lint": "run-p lint:*",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"lint:md:docs": "wp-scripts lint-md-docs",
 		"lint:php": "composer run-script phpcs",
 		"lint:pkg-json": "wp-scripts lint-pkg-json",
-		"lint": "run-p lint:*",
 		"packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
 		"postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
 		"preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
 		"reset": "rimraf node_modules vendor build blocks package-lock.json composer.lock",
 		"setup": "npm run reset && npm i && composer i && npm run build",
-		"start:with-fonts": "npm run generate-theme-json && npm run start",
 		"start": "rimraf build blocks && npm run fonts && wp-scripts start",
 		"update-cursorrules": "./scripts/update-cursorrules.sh",
 		"version-update": "dotenv node updateVersion.js"
