--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "cross-env": "^7.0.3",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^9.31.0",
+    "eslint": "8.57.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react-hooks": "^5.2.0",
