Optimize config and added modern rules

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <ruleset name="WordPress Coding Standards">
-	<description>Apply WordPress Coding Standards</description>
+	<description>Apply WordPress Coding Standards for WDS-BT</description>
 
 	<!-- Set the memory limit to 512M.
 		 For most standard PHP configurations, this means the memory limit will temporarily be raised.
@@ -14,35 +14,8 @@
 	<!-- Show sniff codes in all reports. -->
 	<arg value="ps"/>
 
-	<!-- WordPress Core currently supports PHP 8.2+. -->
-	<config name="testVersion" value="8.2-8.3"/>
-	<rule ref="PHPCompatibilityWP">
-		<include-pattern>*\.php</include-pattern>
-	</rule>
-
 	<!-- Only sniff PHP files. -->
 	<arg name="extensions" value="php"/>
-
-	<!-- Only sniff the theme. -->
-	<file>./</file>
-
-	<!-- Exclude the blocks directory. -->
-	<exclude-pattern>./blocks/*</exclude-pattern>
-
-	<!-- Exclude the build directory. -->
-	<exclude-pattern>/build/*</exclude-pattern>
-
-	<!-- Exclude the Composer Vendor directory. -->
-	<exclude-pattern>./vendor/*</exclude-pattern>
-
-	<!-- Exclude the Node Modules directory. -->
-	<exclude-pattern>/node_modules/*</exclude-pattern>
-
-	<!-- Exclude auto-generated files. -->
-	<exclude-pattern>inc/setup/font-preload.php</exclude-pattern>
-
-	<!-- Exclude minified Javascript files. -->
-	<exclude-pattern>*.min.js</exclude-pattern>
 
 	<!-- Strip the filepaths down to the relevant bit. -->
 	<arg name="basepath" value="."/>
@@ -50,18 +23,38 @@
 	<!-- Check up to 8 files simultaneously. -->
 	<arg name="parallel" value="8"/>
 
+	<!-- Only sniff the theme. -->
+	<file>./</file>
+
+	<!-- Exclude directories and files that shouldn't be checked. -->
+	<exclude-pattern>*/vendor/*</exclude-pattern>
+	<exclude-pattern>*/node_modules/*</exclude-pattern>
+	<exclude-pattern>*/build/*</exclude-pattern>
+	<exclude-pattern>*/blocks/*</exclude-pattern>
+	<exclude-pattern>*.min.js</exclude-pattern>
+	<exclude-pattern>*.min.css</exclude-pattern>
+
+	<!-- Exclude auto-generated files. -->
+	<exclude-pattern>inc/setup/font-preload.php</exclude-pattern>
+
+	<!-- PHP Compatibility: WordPress Core currently supports PHP 8.2+. -->
+	<config name="testVersion" value="8.2-8.3"/>
+	<rule ref="PHPCompatibilityWP">
+		<include-pattern>*\.php</include-pattern>
+	</rule>
+
 	<!-- Use WordPress "Extra" Coding Standards. -->
 	<rule ref="WordPress-Extra">
 		<!-- Allow array short syntax. -->
-		<exclude name="Universal.Arrays.DisallowShortArraySyntax.Found" />
-		<!-- Allow short prefixes. -->
+		<exclude name="Universal.Arrays.DisallowShortArraySyntax.Found"/>
+		<!-- Allow short prefixes for theme-specific functions. -->
 		<exclude name="WordPress.NamingConventions.PrefixAllGlobals.ShortPrefixPassed"/>
-		<!-- Exclude deprecated sniff -->
+		<!-- Exclude deprecated sniff (removed in PHP 8.0). -->
 		<exclude name="Generic.Functions.CallTimePassByReference"/>
 	</rule>
 
 	<!-- Use WordPress "Docs" Coding Standards. -->
-	<rule ref="WordPress-Docs" />
+	<rule ref="WordPress-Docs"/>
 
 	<!-- The minimum supported WordPress version. This should match what's listed in style.css. -->
 	<rule ref="WordPress.WP.DeprecatedFunctions">
@@ -77,31 +70,21 @@
 		</properties>
 	</rule>
 
-	<!-- Verify that everything in the global namespace is prefixed with a theme specific prefix.
-		 Multiple valid prefixes can be provided as a comma-delimited list. -->
+	<!-- Theme-specific prefix validation. -->
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
-			<property name="prefixes" type="array">
-				<element value="WebDevStudios\wdsbt"/>
-				<element value="wds"/>
-				<element value="wdsbt"/>
-			</property>
+			<property name="prefixes" type="array" value="WebDevStudios\wdsbt,wds,wdsbt"/>
 		</properties>
 	</rule>
 
-	<!-- Verify that the text_domain is set to the desired text-domain.
-		 Multiple valid text domains can be provided as a comma-delimited list. -->
+	<!-- Text domain validation. -->
 	<rule ref="WordPress.WP.I18n">
 		<properties>
-			<property name="text_domain" type="array">
-				<element value="wdsbt"/>
-			</property>
+			<property name="text_domain" type="array" value="WebDevStudios\wdsbt,wds,wdsbt"/>
 		</properties>
 	</rule>
 
-	<!-- Exclude deprecated sniff -->
-	<rule ref="Generic.Functions.CallTimePassByReference">
-		<exclude />
-	</rule>
+	<!-- Enforce proper spacing in control structures. -->
+	<rule ref="WordPress.WhiteSpace.ControlStructureSpacing"/>
 
 </ruleset>
