--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wds-bt",
-  "version": "1.3.5",
+  "version": "1.4.0",
   "private": true,
   "description": "A starter block theme from WebDevStudios.",
   "author": "WebDevStudios <contact@webdevstudios.com>",
@@ -22,83 +22,87 @@
     "npm": ">=10"
   },
   "dependencies": {
-    "@wordpress/block-editor": "^14.21.0",
-    "@wordpress/blocks": "^14.15.0",
-    "@wordpress/components": "^29.12.0",
-    "@wordpress/compose": "^7.26.0",
-    "@wordpress/hooks": "^4.26.0",
-    "@wordpress/i18n": "^5.26.0",
-    "@wordpress/token-list": "^3.26.0",
-    "body-parser": "^2.2.0",
+    "@wordpress/block-editor": "^15.10.0",
+    "@wordpress/blocks": "^15.10.0",
+    "@wordpress/components": "^31.0.0",
+    "@wordpress/compose": "^7.37.0",
+    "@wordpress/hooks": "^4.37.0",
+    "@wordpress/i18n": "^6.10.0",
+    "@wordpress/token-list": "^3.37.0",
+    "body-parser": "^2.2.2",
     "braces": "^3.0.3",
-    "cookie": "^1.0.2",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "got": "^14.4.7",
-    "npm": "^11.4.2",
+    "cookie": "^1.1.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "got": "^14.6.6",
+    "npm": "^11.7.0",
     "postcss": "^8.5.6",
-    "send": "^1.2.0",
-    "serve-static": "^2.2.0",
+    "send": "^1.2.1",
+    "serve-static": "^2.2.1",
     "svgo": "^4.0.0",
-    "uuid": "^11.1.0",
-    "ws": "^8.18.3",
+    "uuid": "^13.0.0",
+    "ws": "^8.19.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@babel/plugin-transform-class-static-block": "7.27.1",
-    "@babel/preset-env": "^7.28.0",
-    "@babel/preset-react": "^7.27.1",
-    "@evilmartians/lefthook": "^1.12.2",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^6.26.0",
-    "@wordpress/env": "^10.26.0",
-    "@wordpress/eslint-plugin": "^22.12.0",
-    "@wordpress/prettier-config": "^4.26.0",
-    "@wordpress/scripts": "^30.19.0",
-    "autoprefixer": "^10.4.21",
+    "@babel/core": "^7.28.5",
+    "@babel/plugin-transform-class-static-block": "7.28.3",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
+    "@evilmartians/lefthook": "^2.0.13",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@wordpress/dependency-extraction-webpack-plugin": "^6.37.0",
+    "@wordpress/stylelint-config": "^23.29.0",
+    "@wordpress/env": "^10.37.0",
+    "@wordpress/eslint-plugin": "^23.0.0",
+    "@wordpress/prettier-config": "^4.37.0",
+    "@wordpress/scripts": "^31.2.0",
+    "autoprefixer": "^10.4.23",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^11.1.0",
-    "copy-webpack-plugin": "^13.0.0",
-    "cross-env": "^7.0.3",
-    "css-minimizer-webpack-plugin": "^7.0.2",
-    "dotenv-cli": "^8.0.0",
-    "eslint": "8.57.1",
+    "copy-webpack-plugin": "^13.0.1",
+    "cross-env": "^10.1.0",
+    "css-minimizer-webpack-plugin": "^7.0.4",
+    "dotenv-cli": "^11.0.0",
+    "eslint": "9.39.2",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-prettier": "^5.5.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-webpack-plugin": "^5.0.2",
-    "glob": "^11.0.3",
+    "glob": "^13.0.0",
     "html_codesniffer": "2.5.1",
-    "image-minimizer-webpack-plugin": "^4.1.3",
+    "image-minimizer-webpack-plugin": "^4.1.4",
     "imagemin": "^9.0.1",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^8.0.0",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^11.0.1",
-    "inquirer": "^12.7.0",
-    "lint-staged": "16.1.2",
-    "mini-css-extract-plugin": "^2.9.2",
-    "npm-check-updates": "^18.0.1",
+    "inquirer": "^13.1.0",
+    "lint-staged": "16.2.7",
+    "node-fetch": "^3.3.2",
+    "mini-css-extract-plugin": "^2.9.4",
+    "npm-check-updates": "^19.3.1",
     "npm-run-all": "4.1.5",
-    "pa11y-ci": "^3.1.0",
-    "postcss-loader": "^8.1.1",
+    "pa11y-ci": "^4.0.1",
+    "postcss-loader": "^8.2.0",
     "postcss-move-props-to-bg-image-query": "^4.0.0",
-    "postcss-preset-env": "^10.2.4",
+    "postcss-preset-env": "^10.6.0",
     "postcss-rtl": "^2.0.0",
-    "prettier": "3.6.2",
-    "puppeteer-core": "24.14.0",
+    "prettier": "3.7.4",
+    "puppeteer-core": "24.34.0",
     "remove-files-webpack-plugin": "^1.5.0",
-    "rimraf": "^6.0.1",
-    "sass-loader": "^16.0.5",
+    "rimraf": "^6.1.2",
+    "sass-loader": "^16.0.6",
     "stylelint-webpack-plugin": "^5.0.1",
-    "svg-spritemap-webpack-plugin": "^4.7.0",
+    "svg-spritemap-webpack-plugin": "^5.1.0",
     "svg-transform-loader": "^2.0.13",
-    "terser-webpack-plugin": "^5.3.14",
+    "terser-webpack-plugin": "^5.3.16",
     "thread-loader": "^4.0.4",
-    "webpack": "^5.100.2",
+    "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
     "webpackbar": "^7.0.0"
   },
@@ -110,12 +114,12 @@
     "format": "wp-scripts format && npm run format:php && npm run format:js",
     "format:css": "wp-scripts format ./assets/**/*.scss",
     "format:php": "composer run-script phpcs-fix",
-    "fonts": "rimraf build/fonts && php tools/font-processor.php",
-    "fonts:detect": "php tools/font-detection.php",
-    "fonts:generate": "php tools/generate-theme-json.php",
+    "fonts": "rimraf build/fonts && /opt/homebrew/bin/php -n tools/font-processor.php",
+    "fonts:detect": "/opt/homebrew/bin/php -n tools/font-detection.php",
+    "fonts:generate": "/opt/homebrew/bin/php -n tools/generate-theme-json.php",
     "lint": "run-p lint:*",
     "lint:css": "wp-scripts lint-style",
-    "lint:js": "wp-scripts lint-js",
+    "lint:js": "eslint . --ext .js,.jsx",
     "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:php": "composer run-script phpcs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
