Add PHP path auto-detection for cross-platform compatibility

--- a/package.json
+++ b/package.json
@@ -1,142 +1,133 @@
 {
-  "name": "wds-bt",
-  "version": "1.4.0",
-  "private": true,
-  "description": "A starter block theme from WebDevStudios.",
-  "author": "WebDevStudios <contact@webdevstudios.com>",
-  "license": "GPL-2.0-or-later",
-  "keywords": [
-    "WordPress",
-    "Theme"
-  ],
-  "homepage": "https://github.com/WebDevStudios/wds-bt/#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/WebDevStudios/wds-bt.git"
-  },
-  "bugs": {
-    "url": "https://github.com/WebDevStudios/wds-bt/issues"
-  },
-  "engines": {
-    "node": ">=22.0.0",
-    "npm": ">=10"
-  },
-  "dependencies": {
-    "@wordpress/block-editor": "^15.10.0",
-    "@wordpress/blocks": "^15.10.0",
-    "@wordpress/components": "^31.0.0",
-    "@wordpress/compose": "^7.37.0",
-    "@wordpress/hooks": "^4.37.0",
-    "@wordpress/i18n": "^6.10.0",
-    "@wordpress/token-list": "^3.37.0",
-    "body-parser": "^2.2.2",
-    "braces": "^3.0.3",
-    "cookie": "^1.1.1",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "got": "^14.6.6",
-    "npm": "^11.7.0",
-    "postcss": "^8.5.6",
-    "send": "^1.2.1",
-    "serve-static": "^2.2.1",
-    "svgo": "^4.0.0",
-    "uuid": "^13.0.0",
-    "ws": "^8.19.0",
-    "xml2js": "^0.6.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-transform-class-static-block": "7.28.3",
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-    "@eslint/eslintrc": "^3.3.3",
-    "@eslint/js": "^9.39.2",
-    "@evilmartians/lefthook": "^2.0.13",
-    "@typescript-eslint/eslint-plugin": "^8.52.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^6.37.0",
-    "@wordpress/env": "^10.37.0",
-    "@wordpress/eslint-plugin": "^23.0.0",
-    "@wordpress/prettier-config": "^4.37.0",
-    "@wordpress/scripts": "^31.2.0",
-    "@wordpress/stylelint-config": "^23.29.0",
-    "autoprefixer": "^10.4.23",
-    "babel-loader": "^10.0.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "compression-webpack-plugin": "^11.1.0",
-    "copy-webpack-plugin": "^13.0.1",
-    "cross-env": "^10.1.0",
-    "css-minimizer-webpack-plugin": "^7.0.4",
-    "dotenv-cli": "^11.0.0",
-    "eslint": "9.39.2",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-webpack-plugin": "^5.0.2",
-    "glob": "^13.0.0",
-    "html_codesniffer": "2.5.1",
-    "image-minimizer-webpack-plugin": "^4.1.4",
-    "imagemin": "^9.0.1",
-    "imagemin-gifsicle": "^7.0.0",
-    "imagemin-jpegtran": "^8.0.0",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^11.0.1",
-    "inquirer": "^13.1.0",
-    "lint-staged": "16.2.7",
-    "mini-css-extract-plugin": "^2.9.4",
-    "node-fetch": "^3.3.2",
-    "npm-check-updates": "^19.3.1",
-    "npm-run-all": "4.1.5",
-    "pa11y-ci": "^4.0.1",
-    "postcss-loader": "^8.2.0",
-    "postcss-move-props-to-bg-image-query": "^4.0.0",
-    "postcss-preset-env": "^10.6.0",
-    "postcss-rtl": "^2.0.0",
-    "prettier": "3.7.4",
-    "puppeteer-core": "24.34.0",
-    "remove-files-webpack-plugin": "^1.5.0",
-    "rimraf": "^6.1.2",
-    "sass-loader": "^16.0.6",
-    "stylelint-webpack-plugin": "^5.0.1",
-    "svg-spritemap-webpack-plugin": "^5.1.0",
-    "svg-transform-loader": "^2.0.13",
-    "terser-webpack-plugin": "^5.3.16",
-    "thread-loader": "^4.0.4",
-    "webpack": "^5.104.1",
-    "webpack-cli": "^6.0.1",
-    "webpackbar": "^7.0.0"
-  },
-  "scripts": {
-    "a11y": "node a11y.cjs",
-    "build": "rimraf blocks build && wp-scripts build --config webpack.config.js --progress && npm run fonts:generate",
-    "create-block": "run-s create-block:run",
-    "create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
+	"name": "wds-bt",
+	"version": "1.4.0",
+	"private": true,
+	"description": "A starter block theme from WebDevStudios.",
+	"author": "WebDevStudios <contact@webdevstudios.com>",
+	"license": "GPL-2.0-or-later",
+	"keywords": [
+		"WordPress",
+		"Theme"
+	],
+	"homepage": "https://github.com/WebDevStudios/wds-bt/#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/WebDevStudios/wds-bt.git"
+	},
+	"bugs": {
+		"url": "https://github.com/WebDevStudios/wds-bt/issues"
+	},
+	"engines": {
+		"node": ">=22.0.0",
+		"npm": ">=10"
+	},
+	"dependencies": {
+		"@wordpress/block-editor": "^15.10.0",
+		"@wordpress/blocks": "^15.10.0",
+		"@wordpress/components": "^31.0.0",
+		"@wordpress/compose": "^7.37.0",
+		"@wordpress/hooks": "^4.37.0",
+		"@wordpress/i18n": "^6.10.0",
+		"@wordpress/token-list": "^3.37.0",
+		"dotenv": "^17.2.3",
+		"postcss": "^8.5.6",
+		"svgo": "^4.0.0",
+		"xml2js": "^0.6.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.28.5",
+		"@babel/plugin-transform-class-static-block": "7.28.3",
+		"@babel/preset-env": "^7.28.5",
+		"@babel/preset-react": "^7.28.5",
+		"@eslint/eslintrc": "^3.3.3",
+		"@eslint/js": "^9.39.2",
+		"@evilmartians/lefthook": "^2.0.13",
+		"@typescript-eslint/eslint-plugin": "^8.52.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^6.37.0",
+		"@wordpress/env": "^10.37.0",
+		"@wordpress/eslint-plugin": "^23.0.0",
+		"@wordpress/prettier-config": "^4.37.0",
+		"@wordpress/scripts": "^31.2.0",
+		"@wordpress/stylelint-config": "^23.29.0",
+		"autoprefixer": "^10.4.23",
+		"babel-loader": "^10.0.0",
+		"clean-webpack-plugin": "^4.0.0",
+		"compression-webpack-plugin": "^11.1.0",
+		"copy-webpack-plugin": "^13.0.1",
+		"cross-env": "^10.1.0",
+		"css-minimizer-webpack-plugin": "^7.0.4",
+		"dotenv-cli": "^11.0.0",
+		"eslint": "9.39.2",
+		"eslint-plugin-eslint-comments": "3.2.0",
+		"eslint-plugin-prettier": "^5.5.4",
+		"eslint-plugin-react-hooks": "^7.0.1",
+		"eslint-webpack-plugin": "^5.0.2",
+		"glob": "^13.0.0",
+		"html_codesniffer": "2.5.1",
+		"image-minimizer-webpack-plugin": "^4.1.4",
+		"imagemin": "^9.0.1",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-jpegtran": "^8.0.0",
+		"imagemin-mozjpeg": "^10.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^11.0.1",
+		"inquirer": "^13.1.0",
+		"lint-staged": "16.2.7",
+		"mini-css-extract-plugin": "^2.9.4",
+		"node-fetch": "^3.3.2",
+		"npm-check-updates": "^19.3.1",
+		"npm-run-all": "4.1.5",
+		"pa11y-ci": "^4.0.1",
+		"postcss-loader": "^8.2.0",
+		"postcss-move-props-to-bg-image-query": "^4.0.0",
+		"postcss-preset-env": "^10.6.0",
+		"postcss-rtl": "^2.0.0",
+		"prettier": "3.7.4",
+		"puppeteer-core": "24.34.0",
+		"remove-files-webpack-plugin": "^1.5.0",
+		"rimraf": "^6.1.2",
+		"sass-loader": "^16.0.6",
+		"stylelint-webpack-plugin": "^5.0.1",
+		"svg-spritemap-webpack-plugin": "^5.1.0",
+		"svg-transform-loader": "^2.0.13",
+		"terser-webpack-plugin": "^5.3.16",
+		"thread-loader": "^4.0.4",
+		"webpack": "^5.104.1",
+		"webpack-cli": "^6.0.1",
+		"webpackbar": "^7.0.0"
+	},
+	"scripts": {
+		"a11y": "node a11y.cjs",
+		"build": "rimraf blocks build && wp-scripts build --config webpack.config.js --progress && npm run fonts:generate",
+		"create-block": "run-s create-block:run",
+		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
     "format": "wp-scripts format && npm run format:php && npm run format:js",
     "format:css": "wp-scripts format ./assets/**/*.scss",
+    "format:js": "wp-scripts format ./assets/**/*.{js,jsx}",
     "format:php": "composer run-script phpcs-fix",
-    "fonts": "rimraf build/fonts && /opt/homebrew/bin/php -n tools/font-processor.php",
-    "fonts:detect": "/opt/homebrew/bin/php -n tools/font-detection.php",
-    "fonts:generate": "/opt/homebrew/bin/php -n tools/generate-theme-json.php",
-    "lint": "run-p lint:*",
-    "lint:css": "wp-scripts lint-style",
-    "lint:js": "eslint . --ext .js,.jsx",
-    "lint:md:docs": "wp-scripts lint-md-docs",
-    "lint:php": "composer run-script phpcs",
-    "lint:pkg-json": "wp-scripts lint-pkg-json",
-    "packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
-    "postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
-    "preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
-    "reset": "rimraf node_modules vendor build blocks package-lock.json composer.lock",
-    "setup": "npm run reset && npm i && composer i && npm run build",
-    "start": "rimraf build blocks && npm run fonts && wp-scripts start",
-    "update-cursorrules": "./scripts/update-cursorrules.sh",
-    "version-update": "dotenv node updateVersion.js"
-  },
-  "lint-staged": {
-    "*.js": "wp-scripts lint-js",
-    "*.php": "composer run lint",
-    "*.scss": "wp-scripts lint-style",
-    "*.json": "wp-scripts lint-pkg-json",
-    "*.md": "wp-scripts lint-md-docs"
-  }
+		"fonts": "rimraf build/fonts && $(node scripts/get-php.js) -n tools/font-processor.php",
+		"fonts:detect": "$(node scripts/get-php.js) -n tools/font-detection.php",
+		"fonts:generate": "$(node scripts/get-php.js) -n tools/generate-theme-json.php",
+		"lint": "run-p lint:*",
+		"lint:css": "wp-scripts lint-style",
+		"lint:js": "eslint . --ext .js,.jsx",
+		"lint:md:docs": "wp-scripts lint-md-docs",
+		"lint:php": "composer run-script phpcs",
+		"lint:pkg-json": "wp-scripts lint-pkg-json",
+		"packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
+		"postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
+		"preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
+		"reset": "rimraf node_modules vendor build blocks package-lock.json composer.lock",
+    "setup": "npm run reset && npm i --no-fund --no-audit --loglevel=error && composer i --quiet --no-interaction && npm run build",
+		"start": "rimraf build blocks && npm run fonts && wp-scripts start",
+		"update-cursorrules": "./scripts/update-cursorrules.sh",
+		"version-update": "dotenv node updateVersion.js"
+	},
+	"lint-staged": {
+		"*.js": "wp-scripts lint-js",
+		"*.php": "composer run lint",
+		"*.scss": "wp-scripts lint-style",
+		"*.json": "wp-scripts lint-pkg-json",
+		"*.md": "wp-scripts lint-md-docs"
+	}
 }
