--- a/package.json
+++ b/package.json
@@ -101,13 +101,13 @@
 		"build": "rimraf blocks build && wp-scripts build --config webpack.config.js --progress && npm run fonts:generate",
 		"create-block": "run-s create-block:run",
 		"create-block:run": "cd ./assets/blocks && npx @wordpress/create-block --namespace=wdsbt --template ../../inc/block-template --no-plugin",
-    "format": "wp-scripts format && npm run format:php && npm run format:js",
-    "format:css": "wp-scripts format ./assets/**/*.scss",
-    "format:js": "wp-scripts format ./assets/**/*.{js,jsx}",
-    "format:php": "composer run-script phpcs-fix",
-		"fonts": "rimraf build/fonts && $(node scripts/get-php.js) -n tools/font-processor.php",
-		"fonts:detect": "$(node scripts/get-php.js) -n tools/font-detection.php",
-		"fonts:generate": "$(node scripts/get-php.js) -n tools/generate-theme-json.php",
+		"format": "wp-scripts format && npm run format:php && npm run format:js",
+		"format:css": "wp-scripts format ./assets/**/*.scss",
+		"format:js": "wp-scripts format ./assets/**/*.js && (wp-scripts format ./assets/**/*.jsx 2>&1 | grep -v 'No files matching' || true)",
+		"format:php": "composer run-script phpcs-fix",
+		"fonts": "rimraf build/fonts && $(node scripts/get-php.js) $(bash scripts/get-php-flags.sh) tools/font-processor.php",
+		"fonts:detect": "$(node scripts/get-php.js) $(bash scripts/get-php-flags.sh) tools/font-detection.php",
+		"fonts:generate": "$(node scripts/get-php.js) $(bash scripts/get-php-flags.sh) tools/generate-theme-json.php",
 		"lint": "run-p lint:*",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "eslint . --ext .js,.jsx",
@@ -118,7 +118,7 @@
 		"postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
 		"preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
 		"reset": "rimraf node_modules vendor build blocks package-lock.json composer.lock",
-    "setup": "npm run reset && npm i --no-fund --no-audit --loglevel=error && composer i --quiet --no-interaction && npm run build",
+		"setup": "npm run reset && npm i --no-fund --no-audit --loglevel=error && composer i --quiet --no-interaction && npm run build",
 		"start": "rimraf build blocks && npm run fonts && wp-scripts start",
 		"update-cursorrules": "./scripts/update-cursorrules.sh",
 		"version-update": "dotenv node updateVersion.js"
