Change version to 1.4

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wds-bt",
-  "version": "1.4.0-beta",
+  "version": "1.4.0",
   "private": true,
   "description": "A starter block theme from WebDevStudios.",
   "author": "WebDevStudios <contact@webdevstudios.com>",
