Fix postinstall script with lefthook

--- a/package.json
+++ b/package.json
@@ -22,34 +22,34 @@
     "npm": ">=11.0.0"
   },
   "dependencies": {
-    "@wordpress/block-editor": "^15.11.0",
-    "@wordpress/blocks": "^15.11.0",
-    "@wordpress/components": "^32.0.0",
-    "@wordpress/compose": "^7.38.0",
-    "@wordpress/hooks": "^4.38.0",
-    "@wordpress/i18n": "^6.11.0",
-    "@wordpress/token-list": "^3.38.0",
+    "@wordpress/block-editor": "^15.12.0",
+    "@wordpress/blocks": "^15.12.0",
+    "@wordpress/components": "^32.1.0",
+    "@wordpress/compose": "^7.39.0",
+    "@wordpress/hooks": "^4.39.0",
+    "@wordpress/i18n": "^6.12.0",
+    "@wordpress/token-list": "^3.39.0",
     "dotenv": "^17.2.3",
     "postcss": "^8.5.6",
     "svgo": "^4.0.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.6",
+    "@babel/core": "^7.29.0",
     "@babel/plugin-transform-class-static-block": "7.28.6",
-    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-env": "^7.29.0",
     "@babel/preset-react": "^7.28.5",
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
-    "@evilmartians/lefthook": "^2.0.15",
-    "@typescript-eslint/eslint-plugin": "^8.53.1",
-    "@wordpress/dependency-extraction-webpack-plugin": "^6.38.0",
-    "@wordpress/env": "^10.38.0",
-    "@wordpress/eslint-plugin": "^24.0.0",
-    "@wordpress/prettier-config": "^4.38.0",
-    "@wordpress/scripts": "^31.3.0",
-    "@wordpress/stylelint-config": "^23.30.0",
-    "autoprefixer": "^10.4.23",
+    "@evilmartians/lefthook": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@wordpress/dependency-extraction-webpack-plugin": "^6.39.0",
+    "@wordpress/env": "^10.39.0",
+    "@wordpress/eslint-plugin": "^24.1.0",
+    "@wordpress/prettier-config": "^4.39.0",
+    "@wordpress/scripts": "^31.4.0",
+    "@wordpress/stylelint-config": "^23.31.0",
+    "autoprefixer": "^10.4.24",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^11.1.0",
@@ -71,19 +71,19 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^11.0.1",
-    "inquirer": "^13.2.1",
+    "inquirer": "^13.2.2",
     "lint-staged": "16.2.7",
     "mini-css-extract-plugin": "^2.10.0",
     "node-fetch": "^3.3.2",
-    "npm-check-updates": "^19.3.1",
+    "npm-check-updates": "^19.3.2",
     "npm-run-all": "4.1.5",
     "pa11y-ci": "^4.0.1",
     "postcss-loader": "^8.2.0",
     "postcss-move-props-to-bg-image-query": "^4.0.0",
-    "postcss-preset-env": "^11.1.1",
+    "postcss-preset-env": "^11.1.2",
     "postcss-rtl": "^2.0.0",
     "prettier": "3.8.1",
-    "puppeteer-core": "24.36.0",
+    "puppeteer-core": "24.36.1",
     "remove-files-webpack-plugin": "^1.5.0",
     "rimraf": "^6.1.2",
     "sass-loader": "^16.0.6",
@@ -115,10 +115,10 @@
     "lint:php": "composer run-script phpcs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
     "packages-update": "npx npm-check-updates -u && npm install && npm dedupe && npm audit fix",
-    "postinstall": "npx lefthook install && git config --local core.hooksPath .git/hooks && ./scripts/update-cursorrules.sh",
+    "postinstall": "npx lefthook install --reset-hooks-path && ./scripts/update-cursorrules.sh",
     "preinstall": "npx cross-env npm_config_legacy_peer_deps=true",
     "reset": "rimraf node_modules vendor build blocks package-lock.json composer.lock",
-    "setup": "npm run reset && npm i --no-fund --no-audit --loglevel=error && composer i --quiet --no-interaction && npm run build",
+    "setup": "npm run reset && npm install --no-fund --no-audit --loglevel=error && composer install --quiet --no-interaction && npm run build",
     "start": "rimraf build blocks && npm run fonts && wp-scripts start",
     "update-cursorrules": "./scripts/update-cursorrules.sh",
     "version-update": "dotenv node updateVersion.js"
