--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "fonts:detect": "$(node scripts/get-php.js) $(bash scripts/get-php-flags.sh) tools/font-detection.php",
     "fonts:generate": "$(node scripts/get-php.js) $(bash scripts/get-php-flags.sh) tools/generate-theme-json.php",
     "lint": "run-p lint:*",
-    "lint:css": "wp-scripts lint-style",
-    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:css": "wp-scripts lint-style --max-warnings 0",
+    "lint:js": "eslint . --ext .js,.jsx --max-warnings 0",
     "lint:md:docs": "wp-scripts lint-md-docs",
     "lint:php": "composer run-script phpcs",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
