--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 		"phpcompatibility/phpcompatibility-wp": "2.1.8",
 		"squizlabs/php_codesniffer": "3.13.5",
 		"wp-cli/wp-cli-bundle": "2.12.0",
-		"wp-coding-standards/wpcs": "3.3.0"
+		"wp-coding-standards/wpcs": "^3.3"
 	},
 	"scripts": {
 		"phpcs": [
